<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity" >


        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/coffe_cup3"
                android:padding="16dp"/>

        <EditText
            android:id="@+id/edit_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="16dp"
            android:inputType="text"
            android:hint="@string/edit_name"/>

        <TextView
                android:layout_marginTop="10dp"
                android:text="@string/toppings"
                android:gravity="center"
                style="@style/HeaderTextStyle"/>

            <CheckBox android:id="@+id/checkbox_toppings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whipped_cream"
                android:paddingLeft="16dp"
                android:textSize="15sp"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/checkbox_chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:paddingLeft="16dp"
                android:textSize="15sp"
                android:onClick="onCheckboxClicked"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/quantity"
                style="@style/HeaderTextStyle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/minus"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:onClick="decrement"/>

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="32dp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/plus"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:onClick="increment"/>

            </LinearLayout>



            <TextView
                android:text="@string/order_summary"
                android:layout_marginTop="16dp"
                style="@style/HeaderTextStyle" />

            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bucks_zero"
                android:textSize="22sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/order"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:onClick="submitOrder"/>

    </LinearLayout >
</ScrollView>